 [1873221] TLB page flush: add logical address to instrumentation by Lluis
 [1830626] lba32 support by Samuel Thibault
 [1861839] Move option rom scan after floppy and hard drive post by Sebastian
 [1838283] Early vga bios init by Sebastian
 [1838272] rom_scan range parameter by Sebastian
 [1864680] Save CPUID signature by Filip Navara

- these S.F. bugs were closed
 [1744820] info gdt and info idt shows the entire tables
 [1755652] graphics: MenuetOS64 shows black screen
 [1782207] Windows Installer malfunction, Host=Linux, Guest=Win98SE
 [1697762] OS/2 Warp Install Failed
 [1952548] String to char * warnings
 [1940714] SYSENTER/SYSEXIT doesn't work in long mode
 [1422342] SYSRET errors
 [1923803] legacy rombios - e820 map and ACPI_DATA_SIZE
 [1936132] Link problem with --enable-debugger & --enable-disasm
 [1934477] Linear address wrap is not working
 [1424984] virtual machine freezes in Bochs 2.2.6
 [1902928] with debugger cpu_loop leaves CPU with unstable state
 [1898929] Bochs VESA BIOS violates specs (banks == 1)
 [1569256] bug in datasegment change in long mode
 [1830662] ACPI: no DMI BIOS year, acpi=force is required
 [1868806] VGA blink enable & screen disable
 [1875721] Bit "Accessed" in LDT/GDT descriptors & #PF
 [1874124] bx_Instruction_c::ilen() const
 [1873488] bochs-2.3.6 make fails on dbg_main.cc

- these S.F. feature requests were implemented
 [1422769] SYSENTER/SYSEXIT support in x86-64 mode
 [1847955] Version information for bochs(dbg).exe
  [939797] SMBIOS support

-------------------------------------------------------------------------
Changes in 2.3.6 (December 24, 2007):

Brief summary :

+ More than 25% emulation speedup vs Bochs 2.3.5 release!

      - Thanks to Darek Mihocka (http://www.emulators.com)
        for providing patches and ideas that made the
        speedup possible!

+ Up to 40% speedup vs Bochs 2.3.5 release with trace cache optimization!

- Lots of bugfixes in CPU emulation
- Bochs benchmarking support